--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h3>detta är h3</h3>
     <h4>detta är h4</h4>
     <h5>detta är h5</h5>
+    <h6>detta är h6</h6>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis tempora dolor consectetur laudantium distinctio praesentium, cupiditate reprehenderit harum ab doloribus, dolores tempore itaque, qui quisquam est ut nobis beatae quasi!</p>
     <img src="pizza.jpg" alt="en pizza">
 </body>
